# netbase

./: .gitignore  MANIFEST.SKIP  Makefile.PL  README.md  cache.nb
ffi/: Cargo.toml
ffi/src/: c_api.rs  client.rs  lib.rs  trust_dns_ext.rs
ffi/src/c_api/: client.rs  ip.rs  message.rs  mod.rs  name.rs  net.rs  question.rs
lib/: Netbase.pm
lib/Netbase/: Cache.pm  IP.pm  Message.pm  Name.pm  Net.pm  Question.pm
script/: netbase  zcache
t/: basic.t
