[package]
name = "netbase"
version = "0.1.0"
authors = ["Mattias Päivärinta <mattias.paivarinta@iis.se>"]
edition = "2021"

[lib]
crate-type = ["dylib"]

[dependencies]
chrono = "0.4"
futures = "0.3"
futures-util = "0.3"
rmp-serde = "1.0"
serde = { version = "1.0", features = ["rc"] }
serde_bytes = "0.11.5"
serde_derive = "1.0"
tokio = { version = "1.14.0", features = ["full"] }
trust-dns-client = { git = "https://github.com/bluejekyll/trust-dns.git", rev = "0b6fefea3fefe1086fed4df6781550462de51553", features = ["dnssec-openssl"] }
trust-dns-proto = { git = "https://github.com/bluejekyll/trust-dns.git", rev = "0b6fefea3fefe1086fed4df6781550462de51553" }
